// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerTableModel Tests actionColumns 1`] = `
<span>
  <span>
    <button
      aria-label="Left Align"
      className="btn-circle btn btn-outline-secondary"
      disabled={undefined}
      onClick={[Function]}
      type="button"
    >
      <img
        alt="info"
        src="../../style/open-iconic-master/svg/info.svg"
        style={undefined}
      />
    </button>
  </span>
</span>
`;

exports[`CustomerTableModel Tests noActionColumns 1`] = `
<span>
  <span>
    <button
      className="btn btn-info"
      disabled={undefined}
      onClick={[Function]}
      style={undefined}
      type="button"
    >
      Select
    </button>
  </span>
</span>
`;

exports[`CustomerTableModel Tests non-admin actionColumns 1`] = `
<span>
  <span>
    <button
      aria-label="Left Align"
      className="btn-circle btn btn-outline-secondary"
      disabled={undefined}
      onClick={[Function]}
      type="button"
    >
      <img
        alt="info"
        src="../../style/open-iconic-master/svg/info.svg"
        style={undefined}
      />
    </button>
    <button
      aria-label="Left Align"
      className="btn-circle btn btn-outline-secondary"
      disabled={undefined}
      onClick={[Function]}
      type="button"
    >
      <img
        alt="pencil"
        src="../../style/open-iconic-master/svg/pencil.svg"
        style={
          Object {
            "marginLeft": "2px",
          }
        }
      />
    </button>
  </span>
</span>
`;
